riformattazione codice webgl foundamentals

--- a/CaricamentoObj_foundamentals/test_caricamento_obj.html
+++ b/CaricamentoObj_foundamentals/test_caricamento_obj.html
@@ -4,18 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+	<style>
+		body{
+			background-color: rgb(47, 46, 46);
+		}
+
+		#canvas{
+			background-color: rgb(52, 51, 51);
+		}
+	</style>
 </head>
 <body>
-    <canvas id="canvas" height="600" width="400"></canvas>
-    <!--
-    for most samples webgl-utils only provides shader compiling/linking and
-    canvas resizing because why clutter the examples with code that's the same in every sample.
-    See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-    and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-    for webgl-utils, m3, m4, and webgl-lessons-ui.
-    -->
+    <canvas id="canvas" height="600" width="600"></canvas>
+    
+    <script id="3d-vertex-shader" type="x-shader/x-vertex">
+        attribute vec4 a_position;
+        attribute vec3 a_normal;
+        attribute vec2 a_texcoord;
+        attribute vec4 a_color;
+
+        uniform mat4 u_projection;
+        uniform mat4 u_view;
+        uniform mat4 u_world;
+        uniform vec3 u_viewWorldPosition;
+
+        varying vec3 v_normal;
+        varying vec3 v_surfaceToView;
+        varying vec2 v_texcoord;
+        varying vec4 v_color;
+
+        void main() {
+            vec4 worldPosition = u_world * a_position;
+            gl_Position = u_projection * u_view * worldPosition;
+            v_surfaceToView = u_viewWorldPosition - worldPosition.xyz;
+            v_normal = mat3(u_world) * a_normal;
+            v_texcoord = a_texcoord;
+            v_color = a_color;
+        }
+    </script>
+
+	<script id="3d-fragment-shader" type="x-shader/x-fragment">
+		precision highp float;
+
+		varying vec3 v_normal;
+		varying vec3 v_surfaceToView;
+		varying vec2 v_texcoord;
+		varying vec4 v_color;
+
+		uniform vec3 diffuse;
+		uniform sampler2D diffuseMap;
+		uniform vec3 ambient;
+		uniform vec3 emissive;
+		uniform vec3 specular;
+		uniform float shininess;
+		uniform float opacity;
+		uniform vec3 u_lightDirection;
+		uniform vec3 u_ambientLight;
+
+		void main () {
+			vec3 normal = normalize(v_normal);
+
+			vec3 surfaceToViewDirection = normalize(v_surfaceToView);
+			vec3 halfVector = normalize(u_lightDirection + surfaceToViewDirection);
+
+			float fakeLight = dot(u_lightDirection, normal) * .5 + .5;
+			float specularLight = clamp(dot(normal, halfVector), 0.0, 1.0);
+
+			vec4 diffuseMapColor = texture2D(diffuseMap, v_texcoord);
+			vec3 effectiveDiffuse = diffuse * diffuseMapColor.rgb * v_color.rgb;
+			float effectiveOpacity = opacity * diffuseMapColor.a * v_color.a;
+
+			gl_FragColor = vec4(
+				emissive +
+				ambient * u_ambientLight +
+				effectiveDiffuse * fakeLight +
+				specular * pow(specularLight, shininess),
+				effectiveOpacity);
+		}
+	</script>
+
+
     <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-    <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>    
+    <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+	<script src="objParsers.js"></script>    
+	<script src="textureHelpers.js"></script>
     <script src="test_caricamento_obj.js"></script>
 </body>
 </html>
