modificato codice webgl_foundamentals per caricare più oggetti ed adattato parser per caricare oggetti _Wavefront_

--- a/CaricamentoObj_foundamentals/test_caricamento_obj.html
+++ b/CaricamentoObj_foundamentals/test_caricamento_obj.html
@@ -89,6 +89,6 @@
     <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
 	<script src="objParsers.js"></script>    
 	<script src="textureHelpers.js"></script>
-    <script src="test_caricamento_obj.js"></script>
+    <script src="test_caricamento_obj3.js"></script>
 </body>
 </html>
