--- a/CaricamentoObj_foundamentals/test_caricamento_obj.html
+++ b/CaricamentoObj_foundamentals/test_caricamento_obj.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 
 	<style>
-		body{
-			background-color: rgb(47, 46, 46);
+		body {
+			background-color: rgb(54, 53, 53);
 		}
 
-		#canvas{
-			background-color: rgb(52, 51, 51);
+		#canvas {
+			background-color: rgb(51, 50, 50);
 		}
 	</style>
 </head>
+
 <body>
-    <canvas id="canvas" height="600" width="600"></canvas>
-    
-    <script id="3d-vertex-shader" type="x-shader/x-vertex">
+
+	<canvas id="canvas" width="800" height="600"></canvas>
+
+	<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+	<script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+
+	<script id="3d-vertex-shader" type="x-shader/x-vertex">
         attribute vec4 a_position;
-        attribute vec3 a_normal;
-        attribute vec2 a_texcoord;
-        attribute vec4 a_color;
+		attribute vec3 a_normal;
+		attribute vec3 a_tangent;
+		attribute vec2 a_texcoord;
+		attribute vec4 a_color;
 
-        uniform mat4 u_projection;
-        uniform mat4 u_view;
-        uniform mat4 u_world;
-        uniform vec3 u_viewWorldPosition;
+		uniform mat4 u_projection;
+		uniform mat4 u_view;
+		uniform mat4 u_world;
+		uniform vec3 u_viewWorldPosition;
 
-        varying vec3 v_normal;
-        varying vec3 v_surfaceToView;
-        varying vec2 v_texcoord;
-        varying vec4 v_color;
+		varying vec3 v_normal;
+		varying vec3 v_tangent;
+		varying vec3 v_surfaceToView;
+		varying vec2 v_texcoord;
+		varying vec4 v_color;
 
-        void main() {
-            vec4 worldPosition = u_world * a_position;
-            gl_Position = u_projection * u_view * worldPosition;
-            v_surfaceToView = u_viewWorldPosition - worldPosition.xyz;
-            v_normal = mat3(u_world) * a_normal;
-            v_texcoord = a_texcoord;
-            v_color = a_color;
-        }
+		void main() {
+			vec4 worldPosition = u_world * a_position;
+			gl_Position = u_projection * u_view * worldPosition;
+			v_surfaceToView = u_viewWorldPosition - worldPosition.xyz;
+			mat3 normalMat = mat3(u_world);
+			v_normal = normalize(normalMat * a_normal);
+			v_tangent = normalize(normalMat * a_tangent);
+
+			v_texcoord = a_texcoord;
+			v_color = a_color;
+		}
     </script>
 
 	<script id="3d-fragment-shader" type="x-shader/x-fragment">
 		precision highp float;
 
 		varying vec3 v_normal;
+		varying vec3 v_tangent;
 		varying vec3 v_surfaceToView;
 		varying vec2 v_texcoord;
 		varying vec4 v_color;
@@ -57,19 +69,29 @@
 		uniform vec3 ambient;
 		uniform vec3 emissive;
 		uniform vec3 specular;
+		uniform sampler2D specularMap;
 		uniform float shininess;
+		uniform sampler2D normalMap;
 		uniform float opacity;
 		uniform vec3 u_lightDirection;
 		uniform vec3 u_ambientLight;
 
 		void main () {
-			vec3 normal = normalize(v_normal);
+			vec3 normal = normalize(v_normal) * ( float( gl_FrontFacing ) * 2.0 - 1.0 );
+			vec3 tangent = normalize(v_tangent) * ( float( gl_FrontFacing ) * 2.0 - 1.0 );
+			vec3 bitangent = normalize(cross(normal, tangent));
+
+			mat3 tbn = mat3(tangent, bitangent, normal);
+			normal = texture2D(normalMap, v_texcoord).rgb * 2. - 1.;
+			normal = normalize(tbn * normal);
 
 			vec3 surfaceToViewDirection = normalize(v_surfaceToView);
 			vec3 halfVector = normalize(u_lightDirection + surfaceToViewDirection);
 
 			float fakeLight = dot(u_lightDirection, normal) * .5 + .5;
 			float specularLight = clamp(dot(normal, halfVector), 0.0, 1.0);
+			vec4 specularMapColor = texture2D(specularMap, v_texcoord);
+			vec3 effectiveSpecular = specular * specularMapColor.rgb;
 
 			vec4 diffuseMapColor = texture2D(diffuseMap, v_texcoord);
 			vec3 effectiveDiffuse = diffuse * diffuseMapColor.rgb * v_color.rgb;
@@ -79,16 +101,14 @@
 				emissive +
 				ambient * u_ambientLight +
 				effectiveDiffuse * fakeLight +
-				specular * pow(specularLight, shininess),
+				effectiveSpecular * pow(specularLight, shininess),
 				effectiveOpacity);
 		}
 	</script>
 
-
-    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-    <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-	<script src="objParsers.js"></script>    
+	<script src="objParsers.js"></script>
 	<script src="textureHelpers.js"></script>
-    <script src="test_caricamento_obj3.js"></script>
+	<script src="test_caricamento_obj.js"></script>
 </body>
+
 </html>
