rifiniture e aggiunta documentazione

--- a/Progetto/project/index.html
+++ b/Progetto/project/index.html
@@ -153,6 +153,8 @@
 		</div>
 	</div>
 
+	<a style="padding: 20px;" href="../doc/doc.html"> Documentazione e informazioni sul progetto</a>
+
 
 	<script src="https://kit.fontawesome.com/06d84ce8cf.js" crossorigin="anonymous"></script>
 
